--- a/playbooks/provision.yml
+++ b/playbooks/provision.yml
@@ -6,6 +6,6 @@
   roles:
   - role: ansible.kubernetes-modules
     install_python_requirements: no
-  - role: ansibleplaybookbundle.asb-modules
+#  - role: ansibleplaybookbundle.asb-modules
   - role: provision-fission-apb
     playbook_debug: false
