--- a/roles/provision-fission-apb/defaults/main.yml
+++ b/roles/provision-fission-apb/defaults/main.yml
@@ -1,7 +1,7 @@
 ---
 serviceType: LoadBalancer
 image: fission/fission-bundle
-imageTag: alpha20170124
+imageTag: 0.4.0
 fetcherImage: fission/fetcher
 fetcherImageTag: latest
 controllerPort: 31313
