--- a/roles/provision-fission-apb/defaults/main.yml
+++ b/roles/provision-fission-apb/defaults/main.yml
@@ -1,7 +1,8 @@
 ---
 serviceType: LoadBalancer
 image: fission/fission-bundle
-imageTag: 0.4.0
+#imageTag: 0.4.0
+imageTag: 20171206
 fetcherImage: fission/fetcher
 fetcherImageTag: latest
 controllerPort: 31313
