preliminary working code

--- a/roles/provision-fission-apb/tasks/main.yml
+++ b/roles/provision-fission-apb/tasks/main.yml
@@ -12,9 +12,9 @@
     name: router
     namespace: "{{ namespace }}"
     labels:
-      service: router
+      svc: router
     selector:
-        service: router
+        svc: router
     ports:
       - port: 80
         target_port: 8888
@@ -63,67 +63,82 @@
     name: fission-svc
     namespace: "{{ namespace }}"
 
+#- name: Create admin Role Binding
+#  k8s_v1beta1_role_binding:
+#    name: fission-admin 
+#    namespace: "{{ namespace }}"
+#    role_ref_kind: ClusterRole
+#    role_ref_name: admin
+#    subjects:
+#    - kind: ServiceAccount
+#      name: fission-svc
+#      namespace: "{{ namespace }}"
+
 - name: Create admin Role Binding
-  k8s_v1beta1_role_binding:
-    name: fission-admin 
-    namespace: "{{ namespace }}"
-    role_ref_kind: ClusterRole
-    role_ref_name: admin
-    subjects:
-    - kind: ServiceAccount
-      name: fission-svc
-      namespace: "{{ namespace }}"
+  command: "oc adm policy add-cluster-role-to-user cluster-admin -z fission-svc -n {{ namespace }}"
+
+#- name: Create function Role Binding
+#  k8s_v1beta1_role_binding:
+#    name: fission-function-admin
+#    namespace: "{{ namespace }}"
+#    role_ref_kind: ClusterRole
+#    role_ref_name: admin
+#    subjects:
+#    - kind: ServiceAccount
+#      name: fission-svc
+#      namespace: "{{ functionNamespace }}"
 
 - name: Create function Role Binding
-  k8s_v1beta1_role_binding:
-    name: fission-function-admin
-    namespace: "{{ namespace }}"
-    role_ref_kind: ClusterRole
-    role_ref_name: admin
-    subjects:
-    - kind: ServiceAccount
-      name: fission-svc
-      namespace: "{{ functionNamespace }}"
+  command: "oc adm policy add-role-to-user admin -z fission-svc -n {{ functionNamespace }}"
+
+#- name: Create crd Role Binding
+#  k8s_v1beta1_cluster_role_binding:
+#    name: fission-crd
+#    role_ref_kind: ClusterRole
+#    role_ref_name: cluster-admin
+#    subjects:
+#    - kind: ServiceAccount
+#      name: fission-svc
+#      namespace: "{{ namespace }}"
 
 - name: Create crd Role Binding
-  k8s_v1beta1_cluster_role_binding:
-    name: fission-crd
-    role_ref_kind: ClusterRole
-    role_ref_name: cluster-admin
-    subjects:
-    - kind: ServiceAccount
-      name: fission-svc
-      namespace: "{{ namespace }}"
+  command: "oc adm policy add-cluster-role-to-user cluster-admin -z fission-crd -n {{ namespace }}"
 
 - name: Create fetcher Service Account
   k8s_v1_service_account:
     name: fission-fetcher
     namespace: "{{ functionNamespace }}"
 
+#- name: Create fetcher Role Binding
+#  k8s_v1beta1_cluster_role_binding:
+#    name: fission-fetcher-crd
+#    role_ref_kind: ClusterRole
+#    role_ref_name: cluster-admin
+#    subjects:
+#    - kind: ServiceAccount
+#      name: fission-fetcher
+#      namespace: "{{ functionNamespace }}"
+
 - name: Create fetcher Role Binding
-  k8s_v1beta1_cluster_role_binding:
-    name: fission-fetcher-crd
-    role_ref_kind: ClusterRole
-    role_ref_name: cluster-admin
-    subjects:
-    - kind: ServiceAccount
-      name: fission-fetcher
-      namespace: "{{ functionNamespace }}"
+  command: "oc adm policy add-cluster-role-to-user cluster-admin -z fission-fetcher -n {{ functionNamespace }}"
 
 - name: Create builder Service Account
   k8s_v1_service_account:
     name: fission-builder
     namespace: "{{ builderNamespace }}"
 
+#- name: Create builder Role Binding
+#  k8s_v1beta1_cluster_role_binding:
+#    name: fission-builder-crd
+#    role_ref_kind: ClusterRole
+#    role_ref_name: cluster-admin
+#    subjects:
+#    - kind: ServiceAccount
+#      name: fission-builder
+#      namespace: "{{ builderNamespace }}"
+
 - name: Create builder Role Binding
-  k8s_v1beta1_cluster_role_binding:
-    name: fission-builder-crd
-    role_ref_kind: ClusterRole
-    role_ref_name: cluster-admin
-    subjects:
-    - kind: ServiceAccount
-      name: fission-fetcher
-      namespace: "{{ builderNamespace }}"
+  command: "oc adm policy add-cluster-role-to-user cluster-admin -z fission-builder -n {{ builderNamespace }}"
 
 - name: Create controller deployment
   k8s_extensions_v1beta1_deployment:
